🐛 Fix overflow

--- a/src/styles/partials/_showcase.scss
+++ b/src/styles/partials/_showcase.scss
@@ -25,6 +25,7 @@ $color_3: white;
   }
 }
 .showcase {
+  overflow-x: hidden;
   margin-top: 6rem;
   display: flex;
   flex-direction: column;
